[base_de_projet] BaseDeProjet -> TeenSTAR

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="base_de_projet">
+  <meta name="apple-mobile-web-app-title" content="teenstar">
   <meta name="google-signin-client_id" content="732444715939-256p8ibh79coqofvpcd7f2fv0g1g1k94.apps.googleusercontent.com">
   
   <link rel="apple-touch-icon" sizes="57x57" href="icons/apple-icon-57x57.png">
@@ -41,7 +41,7 @@
     <link rel="icon" type="image/pg" href="favicon/png"/>
   <!-- <link rel="apple-touch-icon" href="icons/Icon-192.png"> -->
 
-  <title>base_de_projet</title>
+  <title>teenstar</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" type="text/css" href="splash/style.css">
 </head>
