--- a/assets/html/guide_avance_en.html
+++ b/assets/html/guide_avance_en.html
@@ -1,4 +1,6 @@
-<h3 style="color: green">1- Scientific basis</h3>
+<img src="asset:assets/icon_app/icon_principe_de_base.png" width="30"></img>
+
+<h3 style="color: rgb(0, 69, 130)">1- Scientific basis</h3>
 The self-observation proposed here is linked to the secretion of mucus (also called "cervical mucus")
 produced by the uterine cervix, and which flows to the vulva. Its properties were discovered in 1953 and
 scientifically studied by 2 doctors (Professor Erik Odeblad, specialist in medical bio-physics at Umea
@@ -6,20 +8,20 @@ University, Sweden; Professor James B. Brown, professor of endocrinology, New Ze
 <b>It is not recommended to look for this mucus inside the vagina, as this would, among other
 things, distort observation or sensation.</b>
 
-<h3 style="color: green">2- Understanding <i style="color: blue">mucus observation</i></h3>
+<h3 style="color: rgb(0, 69, 130)">2- Understanding <span style="color: rgb(33, 150, 243)">mucus observation</span></h3>
 
 <table style="border: 1px solid black;">
     <tbody >
         <tr style="border: 1px solid black;">
-            <td style="width: 10%;">1</td>
-            <td style="width: 45%;">No mucus observed <img src="asset:assets/icon_app/icon_principe_de_base.png" width="30"></img></td>
-            <td style="width: 45%;"></td>
+            <td style="width: 4%;">1</td>
+            <td style="width: 35%;">No mucus observed <img src="asset:assets/icon_observation/icon_mucus_visible.png" width="30"></img></td>
+            <td style="width: 55%;"></td>
         </tr>
         <tr style="border: 1px solid black;">
             <td>2</td>
             <td>Opaque white or yellow;
                 tdick, pasty or lumpy;sticky (non-stretchable) <img src="asset:assets/icon_observation/icon_mucus_opaque_blanc_jaune.png" width="30"></img></td>
-            <td></td>
+            <td>Mucus of non-estrogenic type.</td>
         </tr>
         <tr style="border: 1px solid black;">
             <td>3</td>
@@ -58,8 +60,8 @@ things, distort observation or sensation.</b>
         </tr>
         
         <tr style="border: 1px solid black;">
-            <td colspan="10">Mucus levels 3 to 5 (or even 6) suggest dominant estrogenic impregnation (incipient or established):
-                1. pre-ovulatory estrogenic surge, with or without the onset of ovulation
+            <td colspan="10">Mucus levels 3 to 5 (or even 6) suggest dominant estrogenic impregnation (incipient or established):<br>
+                1. pre-ovulatory estrogenic surge, with or without the onset of ovulation<br>
                 2. post-ovulatory episode of estrogenic dominance (sometimes observed in the middle or end of the
                 luteal phase).</td>
         </tr>
@@ -75,7 +77,7 @@ things, distort observation or sensation.</b>
         
     </tbody>
 </table>
-<h3 style="color: green">3- <i style="color: blue">Cycles</i> tab (summary table, cycle summary)</h3>
+<h3 style="color: rgb(0, 69, 130)">3- <span style="color: rgb(33, 150, 243)">Cycles</span> tab (summary table, cycle summary)</h3>
 The colours in the 3rd column (after the date), automatic according to the chosen combination of vulvar
 sensation + mucus observation, are applied <b>by default pending your manual interpretation of the cycle</b>
 (see § 4):
@@ -96,7 +98,7 @@ stretchable</li>
 N.B. any presence of blood automatically gives priority to RED.
 
 
-<h3 style="color: green">4- <i style="color: blue">Cycle analysis</i> function</h3>
+<h3 style="color: rgb(0, 69, 130)">4- <span style="color: rgb(33, 150, 243)">Cycle analysis</span> function</h3>
 
 The ANALYSIS column, a duplicate of the automatic COLOUR column, allows manual interpretation of the
 cycle by clicking on one or more boxes to be modified. Optional, left to the discretion of the tutor or for
@@ -116,41 +118,46 @@ infertile profile (see "special cases")</li>
 profile.</li>
 </ul>
 <br>
-<b style="color: green">SPECIAL CASES:</b><br>
+
+
+<b style="color: rgb(0, 69, 130)">SPECIAL CASES:</b><br>
+<br>
 <u>Many of the boxes are colourless</u>, as the user is never able to recognize the sensations ("Unperceived"
 sensation).
 If she can easily identify herself thanks to very characteristic and clear secretion profiles, she could
 colour the boxes according to the mucus alone, ignoring the sensation (while continuing to practise
 feeling it): BLUE for estrogenic mucus surges (stretchy to stringy), YELLOW for non-estrogenic mucus
 (opaque not stretchy) and BROWN for no mucus. <br>
+<br>
 <u>Box with a "?"</u> because the user has recorded "Other" (sensation or observation). A discussion* with the
 tutor will clarify the nature of this "other" situation and colour the box accordingly.
 *N.B. the same applies to "Dried deposit", to distinguish vaginal secretions from mucus secretions of
 one type or another.<br>
 <u>Pre-ovulatory BIP and hatching: advanced</u> self-observation users can identify their BIP.
 <br>
+<br>
 Reminder: <b>BIP = Basic Infertile Pattern</b> = sequence that does not change day after day in the pre-
 ovulatory period (sensation and visual appearance remain the same, indicating cervical inactivity).<br>
 
 It can be of the following types:<br>
 <u>- Non-secretory BIP:</u> <b>dry + no mucus</b> (brown boxes, to be hatched )<br>
-<u>- Secretory BIP:</u> <b>dry + opaque mucus</b> (yellow boxes, to be hatched) or sensation of moisture +
-
-opaque mucus (blue boxes by default due to humidity,
+<u>- Secretory BIP:</u> <b>dry + opaque mucus</b> (yellow boxes, to be hatched) or sensation of <b>moisture +
+opaque mucus</b> (blue boxes by default due to humidity,
 which can be coloured in yellow and hatched ).<br>
 
 <u>- N.B. Case of dry BIP </u><b>dry + dried deposit</b> (colourless cells):
 <ul>
-<li>a) The dried deposit is clearly identified as:
-• dried mucus: colourless boxes to be coloured in yellowed and hatched
+<span>a) The dried deposit is clearly identified as:<br>
+    <ul>
+• dried mucus: colourless boxes to be coloured in yellowed and hatched<br>
 • dried vaginal discharge (without cervical mucus): colourless boxes to be coloured in
-brown and hatched</li>
+brown and hatched</ul></span><br>
 
-<li>b) The deposit is not clearly identified: leave colourless and hatched:</li>
+<span>b) The deposit is not clearly identified: leave colourless and hatched:</span>
 </ul>
-<h3 style="color: green">5- <i style="color: blue">History</i> tab</h3>
+<h3 style="color: rgb(0, 69, 130)">5- <span style="color: rgb(33, 150, 243)">History</span> tab</h3>
 
-Summarises the ANALYSIS columns for each cycle. Click on the cycle number to access its <i style="color: blue">Summary</i>
+Summarises the ANALYSIS columns for each cycle. Click on the cycle number to access its <span style="color: blue">Summary</span>
 table and (re)analyse it if required.
-The <i style="color: blue">Return to previous cycle</i> button can be used to cancel the creation of a new cycle by mistake, e.g.
+The <span style="color: blue">Return to previous cycle</span> button can be used to cancel the creation of a new cycle by mistake, e.g.
 when bleeding was mistaken for menstruation.
