[Cycle] Pastille analyse

--- a/assets/html/guide_avance_en.html
+++ b/assets/html/guide_avance_en.html
@@ -18,7 +18,7 @@ things, distort observation or sensation.</b>
         <tr style="border: 1px solid black;">
             <td>2</td>
             <td>Opaque white or yellow;
-                tdick, pasty or lumpy;sticky (non-stretchable) <img src="asset:assets/icon_observation/icon_mucus_opaque_blanc_jaune.png" width="30"></img></td>
+                thick, pasty or lumpy;sticky (non-stretchable) <img src="asset:assets/icon_observation/icon_mucus_opaque_blanc_jaune.png" width="30"></img></td>
             <td>Mucus of non-estrogenic type.</td>
         </tr>
         <tr style="border: 1px solid black;">
@@ -130,9 +130,8 @@ feeling it): BLUE for estrogenic mucus surges (stretchy to stringy), YELLOW for 
 <u>Box with a "?"</u> because the user has recorded "Other" (sensation or observation). A discussion* with the
 tutor will clarify the nature of this "other" situation and colour the box accordingly.
 *N.B. the same applies to "Dried deposit", to distinguish vaginal secretions from mucus secretions of
-one type or another.<br>
+one type or another.<br><br>
 <u>Pre-ovulatory BIP and hatching: advanced</u> self-observation users can identify their BIP.
-<br>
 <br>
 Reminder: <b>BIP = Basic Infertile Pattern</b> = sequence that does not change day after day in the pre-
 ovulatory period (sensation and visual appearance remain the same, indicating cervical inactivity).<br>
