--- a/assets/html/guide_de_base_en.html
+++ b/assets/html/guide_de_base_en.html
@@ -12,10 +12,10 @@ abnormalities, etc.).
 <h3 style="color: rgb(0, 69, 130)">How to observe myself:</h3>
 
 <u>What I feel at the vulva without looking </u>(<b>SENSATION</b>): during my daily activities (walking, stairs, ...) or
-by contracting/releasing the perineum several times (Kegel exercise).
+by contracting/releasing the perineum several times (Kegel exercise).<br>
 <u>What I see </u>(<b>OBSERVATION</b>): what flows from the vulva, on underwear, in the loo, on loo paper (which
 I can fold/unfold to assess the elasticity of any secretion). <b>Do not look for anything inside the
-vagina.</b><br>
+vagina.</b><br><br>
 Caution: in the event of abnormal discharge (dirty or foul-smelling) and/or pain, itching, small sores
 near the vulva, etc., consult a doctor so as not to overlook an infection (sexually transmitted or other)
 which needs to be treated very quickly.
