[TeenSTAR] Correction de bugs

--- a/assets/html/guide_de_base_en.html
+++ b/assets/html/guide_de_base_en.html
@@ -37,7 +37,7 @@ cycle (see next page: <span style="color: rgb(33, 150, 243)">Advanced Guide</spa
 <h3 style="color: rgb(0, 69, 130)">Retention of recordings:</h3>
 The data will only appear on your device (<b>lost cell phone = lost data</b>).<br>
 Tip: <span style="color: rgb(33, 150, 243)">Export your cycles as PDF files</span> ( <img src="asset:assets/icon_app/icon_pdf.png" width="40"></img>) on a regular basis, for archiving on a computer
-(useful later or in case of medical consultation), printing on paper or sending to your companion<br><br>
+(useful later or in case of medical consultation), printing on paper or sending to your tutor<br><br>
 <span style="color: rgb(0, 69, 130)">CONDITIONS OF USE</span>: I have read the above points and understand that <b>this application</b> will help
 me record my daily observations during my menstrual cycles, but <b>is in no way sufficient on its own
 to prevent </b>(or promote) <b>pregnancy</b>. I understand that if this were my goal, I would need to undergo
