--- a/assets/html/guide_de_base_fr.html
+++ b/assets/html/guide_de_base_fr.html
@@ -14,7 +14,7 @@ hormonaux, impact de certains évènements sur le déroulement du cycle, anomali
 
 <u>Ce que je sens à la vulve sans regarder </u>(<b>SENSATION</b>): pendant mes activités
 quotidiennes (marche, escaliers, ...) ou en contractant/relâchant plusieurs fois le périnée
-(exercice de Kegel).<br>
+(exercice de Kegel).<br><br>
 <u>Ce que je vois </u>(<b>OBSERVATION</b>): ce qui s’écoule de la vulve, sur le sous-vêtement, aux
 toilettes, sur le papier toilette (que je peux replier /déplier pour évaluer l’élasticité d’une
 éventuelle sécrétion). <b>Ne rien rechercher à l’intérieur du vagin.</b><br>
