--- a/assets/html/guide_de_base_fr.html
+++ b/assets/html/guide_de_base_fr.html
@@ -32,10 +32,9 @@ et OBSERVATION).<br>
 Sélectionner <span style="color: rgb(33, 150, 243)">Débuter un nouveau cycle</span> dès le 1er jour des règles, sinon continuer le cycle en cours.<br>
 Parmi les notes possibles, #1 et #2 sont deux types d'évènements de votre choix, toujours les mêmes,
   et → correspond à voyage ou horaires inhabituels (décalage horaire ou coucher tardif la veille, travail de nuit, nuit interrompue,...). 
-  Il est aussi possible de noter sa température basale (prise chaque jour à la même heure, avant le lever) afin d'observer son élévation en 2e partie de cycle.<br><br>
+  Il est aussi possible de noter sa température basale (prise chaque jour à la même heure, avant le lever) afin d'observer son élévation en 2e partie de cycle.<br>
 
-  </h3 style="color: rgb(0, 69, 130)">Synthèse du cycle:</h3>
-
+  <h3 style="color: rgb(0, 69, 130)">Synthèse du cycle</h3>
   L’onglet <span style="color: rgb(33, 150, 243)">Cycles</span> récapitule le cycle sur un tableau, en y ajoutant des couleurs par défaut, mais qui <b>ne correspondent PAS à un repérage des périodes fertiles ou infertiles du cycle. </b><br>
 Cliquer sur une ligne permet de relire une note ou, avec l’aide de votre animatrice, d'interpréter manuellement le cycle (cf page suivante : <span style="color: rgb(33, 150, 243)">Guide avancé</span> § 4).
 
